# SomeSimpleProjects

./: CMakeLists.txt  README.md  main.cpp  source
scr/BPlusTree/: BTree.h  CMakeLists.txt  Node.cpp  Node.h  SmartBTree.cpp  SmartBTree.h
scr/SimpleTree/: CMakeLists.txt  Node.h  SimpleSearchTree.cpp  SimpleSearchTree.h
scr/SimpleTreeTest/: BTreeTest.cpp  CMakeLists.txt  SimpleSearchTreeTest.cpp
